Correct horizontal alignement Override chrome://global/skin/global.css dialog {   padding-top: 8px;   padding-bottom: 10px;   -moz-padding-start: 8px;   -moz-padding-end: 10px; } (#3)

--- a/options.css
+++ b/options.css
@@ -6,3 +6,9 @@ consoleloggeritem {
 	overflow: hidden;
 	height: 0;
 }
+#consoleLoggerOptions {
+	padding: 8px;
+}
+#cl-richlistbox {
+	margin: 2px;
+}
